# libdrdc-Interoperability-Data-Standards-Library

./: Makefile  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  bootstrap~  config.h  config.h.in  config.status  configure  configure.ac  configure.lineno  libdrdc.geany  libdrdc.pc.in  libtool  uprev.sh
src/: Makefile  Makefile.am  Makefile.in  libdrdc.h
src/cexcept/: Makefile  Makefile.am  Makefile.in  README
src/cexcept/CVS/: Repository
src/coordinate/: Makefile  Makefile.in  coordinate.h
src/coordinate/.deps/: coordinate.Plo
src/coordinate/.deps/CVS/: Entries
src/data_conv/: Makefile  Makefile.am  Makefile.in
src/data_conv/.deps/CVS/: Repository
src/extras/: Makefile.am  Makefile.in
src/extras/CVS/: Entries  Repository
src/extras/dp46/: Makefile  Makefile.am  Makefile.in  PanTilt.h  PanTiltMessage.c  README.txt  tty_drv.h
src/extras/dp46/CVS/: Entries  Repository
src/f2c_blas/: Makefile.am  Makefile.in  dgemv.c  f2c.h
src/f2c_blas/.deps/: daxpy.Po  dcopy.Po  ddot.Po  dgemm.Po  xerbla.Po
src/f2c_blas/.deps/CVS/: Entries  Repository
src/f2c_blas/CVS/: Repository
src/homogeneous/: Makefile  Makefile.in  homogeneous.c  homogeneous.h
src/homogeneous/.deps/: homogeneous.Po
src/homogeneous/CVS/: Entries
src/matrix_ops/: Makefile  Makefile.am  Makefile.in  f2c.h  matrix_ops.c  matrix_ops.h
src/matrix_ops/.deps/: matrix_ops.Po
src/matrix_ops/.deps/CVS/: Repository
src/quaternion/: Makefile  Makefile.in  quaternion.c  quaternion.h
src/quaternion/.deps/: quaternion.Plo
src/quaternion/.deps/CVS/: Entries  Repository
src/quaternion/CVS/: Entries  Root
src/sglib/: Makefile  Makefile.in
src/sglib/CVS/: Entries
src/sglib/doc/CVS/: Entries  Repository
src/time_conv/: Makefile  Makefile.am  Makefile.in  time_conv.c
src/time_conv/.deps/CVS/: Entries
src/unit_conv/: Makefile  Makefile.am  Makefile.in
src/unit_conv/.deps/: unit_conv.Plo
src/unit_conv/CVS/: Repository
src/wrapper/: Makefile  Makefile.am  Makefile.in  wrapper_cpp.cc  wrapper_ooc.c
src/wrapper/.deps/: wrapper_cpp.Po  wrapper_ooc.Po
src/wrapper/.deps/CVS/: Entries  Repository
tests/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  libtool  license.txt
tests/CVS/: Repository
tests/aclocal/: drdc-target-prefix.m4  drdc-target-prefix.m4~
tests/aclocal/CVS/: Entries
tests/autom4te.cache/: output.0  requests  traces.0  traces.1
tests/cexcept/: Makefile.am  Makefile.in  example1.c  example2.c
tests/cexcept/CVS/: Entries  Repository
tests/common/: Makefile.am  Makefile.in  test.c  test.h
tests/common/CVS/: Entries  Repository
tests/doc/: spie2007.txt  user_guide.html
tests/doxygen/: Doxyfile  libdrdc.cfg  libdrdc.cfg.in  w_frame_coord.fig
tests/doxygen/doc/html/: classdrdc__WPose-members.html  classdrdc__WUTMPose-members.html  classdrdc__eOrient-members.html  classdrdc__lPose.html  classdrdc__lePose-members.html  coordinate_8h-source.html  coordinate_8h.html  data__conv_8h.html  functions.html  functions_0x66.html  functions_0x69.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x73.html  functions_0x75.html  functions_0x76.html  functions_0x79.html  functions_func.html  functions_vars.html  functions_vars_0x63.html  functions_vars_0x64.html  functions_vars_0x68.html  functions_vars_0x69.html  functions_vars_0x6a.html  functions_vars_0x6e.html  functions_vars_0x74.html  functions_vars_0x75.html  functions_vars_0x79.html  functions_vars_0x7a.html  globals.html  globals_0x63.html  globals_0x65.html  globals_0x68.html  globals_0x69.html  globals_0x6a.html  globals_0x6d.html  globals_0x73.html  globals_0x75.html  globals_0x77.html  (+33 more)
tests/doxygen/doc/latex/: classdrdc__HMatrix.tex  classdrdc__Orient.tex  classdrdc__WPosn.tex  classdrdc__WUTMPose.tex  classdrdc__lPose.tex  classdrdc__lPosn.tex  coordinate_8h.tex  doxygen.sty  files.tex  group__a.tex  group__quaternion.tex  matrix__ops_8h.tex  structUnitConv__t.tex  structdrdc__Datum__t.tex  structdrdc__HMatrix__t.tex  structdrdc__Orient__t.tex  structdrdc__WUTMPosn__t.tex  structdrdc__eOrient__t.tex  structdrdc__lPose__t.tex  structdrdc__lePose__t.tex  unit__conv_8h.tex
tests/extras/: t_fsm.c
tests/extras/CVS/: Entries  Repository
tests/sglib/CVS/: Repository
tests/src/: Makefile  libdrdc.h
tests/src/CVS/: Entries  Repository
tests/src/cexcept/: Makefile  Makefile.in  cexcept.h  except.h
tests/src/cexcept/CVS/: Entries
tests/src/coordinate/: Makefile  Makefile.am  Makefile.in  coordinate.c
tests/src/coordinate/.deps/: coordinate.Po
tests/src/coordinate/CVS/: Entries  Repository
tests/src/data_conv/: Makefile  data_conv.c  data_conv.h
tests/src/data_conv/.deps/: data_conv.Plo  data_conv.Po
tests/src/data_conv/CVS/: Entries  Repository
tests/src/extras/: Makefile.am  Makefile.in  README  fsm.c  fsm.h  tscalc.c  tscalc.h
tests/src/extras/dp46/: Makefile_rtems  PanTiltImp.c  pantilt_guide.html  system.h  test.c
tests/src/f2c_blas/: Makefile.in  xerbla.c
tests/src/f2c_blas/.deps/: dgemv.Po  dnrm2.Po  dscal.Po  lsame.Po
tests/src/f2c_blas/CVS/: Entries
tests/src/homogeneous/: Makefile  Makefile.am
tests/src/homogeneous/.deps/: homogeneous.Plo
tests/src/homogeneous/CVS/: Repository
tests/src/matrix_ops/: Makefile  matrix_ops.c  matrix_ops.h
tests/src/matrix_ops/.deps/: matrix_ops.Plo
tests/src/matrix_ops/CVS/: Entries  Repository
tests/src/quaternion/: Makefile  Makefile.am  quaternion.c
tests/src/quaternion/.deps/: quaternion.Po
tests/src/quaternion/CVS/: Repository
tests/src/sglib/: Makefile.am  sglib.h
tests/src/sglib/CVS/: Repository
tests/src/sglib/doc/: index.html
tests/src/time_conv/: Makefile  time_conv.h
tests/src/time_conv/.deps/: time_conv.Plo  (+1 more)
tests/src/unit_conv/: Makefile  unit_conv.c  unit_conv.h
tests/src/wrapper/: Makefile  wrapper.h  wrapper_ooc.c
tests/wrapper/: Makefile.am  Makefile.in  wrapper_cpp_tests.cc  wrapper_cpp_tests.matlab  wrapper_tests.cc
tests/wrapper/CVS/: Entries  Repository
(+131 files in other folders)
