#lib_LIBRARIES = libf2c_blas.a
#libf2c_blas_a_SOURCES =  blaswrap.h f2c.h daxpy.c dcopy.c ddot.c dgemm.c dgemv.c dnrm2.c dscal.c xerbla.c lsame.c

noinst_LTLIBRARIES = libf2c_blas.la
libf2c_blas_la_SOURCES =  blaswrap.h f2c.h daxpy.c dcopy.c ddot.c dgemm.c dgemv.c dnrm2.c dscal.c xerbla.c lsame.c

AM_CPPFLAGS = -I../ -I../cexcept
include_HEADERS =  f2c.h

